# wikiindex

./: .gitmodules  README.md
server/: Dockerfile  README.md  clients.py  compiled.json  compiled_5.json  main.py  modules.py  pyproject.toml  requirements.txt
